Bug 1717077 - Make RestoreSystemTheme call a bit more fine-grained. r=stransky

While testing the above patch on a variety of gtk themes, I noticed that
selection colors were inconsistent (as in, from the old theme) when
switching gtk themes, and tracked that down to this call.

Since we only need to restore the theme when actually overridden, track
that instead.

Differential Revision: https://phabricator.services.mozilla.com/D118311