widget/gtk/nsLookAndFeel.h
@@ -154,7 +154,7 @@ class nsLookAndFeel final : public nsXPLookAndFeel {
   bool mCSDReversedPlacement = false;
   bool mPrefersReducedMotion = false;
   bool mInitialized = false;
-  bool mEverInitialized = false;
+  bool mSystemThemeOverridden = false;
   int32_t mCSDMaximizeButtonPosition = 0;
   int32_t mCSDMinimizeButtonPosition = 0;
   int32_t mCSDCloseButtonPosition = 0;
